# sigma7-sdk-python-bindings

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hello_world.py  sigma_python.cpp  single_device.py
sigma_compile_test/: CMakeLists.txt  hello_world.cpp
